// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`The component should center and maximize the selection when a minHeight and minWidth is given 1`] = `
<DocumentFragment>
  <div
    class="selection"
  >
    <p>
      Lorem ipsum
    </p>
    <div
      data-height="160"
      data-left="0"
      data-testid="modifiable-rectangle"
      data-top="100"
      data-width="640"
    >
      <button
        type="button"
      >
        Double click
      </button>
      <button
        type="button"
      >
        Finish
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`The component should render with children 1`] = `
<DocumentFragment>
  <div
    class="selection"
  >
    <p>
      Lorem ipsum
    </p>
    <div
      data-height="360"
      data-left="0"
      data-testid="modifiable-rectangle"
      data-top="0"
      data-width="640"
    >
      <button
        type="button"
      >
        Double click
      </button>
      <button
        type="button"
      >
        Finish
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`The component should render with minimum size notification 1`] = `
<DocumentFragment>
  <div
    class="selection"
  >
    <p>
      Lorem ipsum
    </p>
    <div
      data-height="200"
      data-left="40"
      data-testid="modifiable-rectangle"
      data-top="30"
      data-width="100"
    >
      <button
        type="button"
      >
        Double click
      </button>
      <button
        type="button"
      >
        Finish
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`The component should render with value as selection 1`] = `
<DocumentFragment>
  <div
    class="selection"
  >
    <p>
      Lorem ipsum
    </p>
    <div
      data-height="2"
      data-left="4"
      data-testid="modifiable-rectangle"
      data-top="3"
      data-width="1"
    >
      <button
        type="button"
      >
        Double click
      </button>
      <button
        type="button"
      >
        Finish
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`The component should render without minimum size notification 1`] = `
<DocumentFragment>
  <div
    class="selection"
  >
    <p>
      Lorem ipsum
    </p>
    <div
      data-height="200"
      data-left="40"
      data-testid="modifiable-rectangle"
      data-top="30"
      data-width="100"
    >
      <button
        type="button"
      >
        Double click
      </button>
      <button
        type="button"
      >
        Finish
      </button>
    </div>
  </div>
</DocumentFragment>
`;
